# dicom-visualizer-slicer

./: CMakeLists.txt  README.md
DICOM2OBJ/: DICOM2OBJ.py  DICOM2OBJ.xml
DICOM2OBJ/Resources/UI/: DICOM2OBJ.ui
InnovateVisualizerSlicerExtension/InnovateVisualizer/: CMakeLists.txt
InnovateVisualizerSlicerExtension/InnovateVisualizer/DICOM2OBJ/: CMakeLists.txt  DICOM2OBJ.py
InnovateVisualizerSlicerExtension/InnovateVisualizer/STL2OBJ/: CMakeLists.txt  STL2OBJ.py
STL2OBJ/: STL2OBJ.py
STL2OBJ/Resources/UI/: STL2OBJ.ui
Test/Resources/UI/: Test.ui
slicer-extension/SegmentDicom/: CMakeLists.txt
slicer-extension/SegmentDicom/SegmentDicom/: SegmentDicom.py
slicer-extension/SegmentDicom/SegmentDicom/Resources/UI/: SegmentDicom.ui
slicer-extension/SegmentDicom/SegmentDicom/SegmentDicom/: CMakeLists.txt
test2/: CMakeLists.txt  test2.py
test2/Resources/UI/: test2.ui
